# Project_Image_Vectorization

./: .gitignore  CMakeLists.txt  Energy.h  Entities.h  Initialisation.h  Propagation.h  README.md  RMS.cpp  RMS.h  Tests.h  Utils.h  bezier.cpp  energy.cpp  entities.cpp  image.h  initialisation.cpp  main.cpp  main.h  propagation.cpp  test.cpp  tests.cpp  utils.cpp
cmake/: FindLIBIGL.cmake.html
compare_energy/:  data_coeur_2   data_coeur_3
data/: rong.jpg.sb-e78261f2-nD4XJU
plot/: energyis.xlsx  figues.xlsx
test_alpha/:  alpha 10^^2   alpha 10^^3  Test_alpha : Puissance=1  Test_alpha : Puissance=2
test_epsilon/: Test_epsilon : Puissance=1  Test_epsilon : Puissance=2
test_propagation/: coeur_prior_data_1.txt  coeur_prior_data_2.txt  cœur_3_data_h_l.txt  fb_90.txt  fb_s_data.txt  fb_s_data_prior.txt  fb_s_data_prior_2.txt  fb_s_data_prior_3.txt  firefox_data.txt  firefox_data_prior.txt  mozilla_data_prior.txt  mozilla_data_prior_2.txt  test.txt  test_Energy_Bezier_Handles_1  test_Energy_Bezier_Handles_2  test_Energy_Bezier_Handles_3  test_Energy_data_1  test_Energy_data_2  test_Energy_data_3  test_Energy_data_4  test_Energy_data_5  test_Energy_data_6  test_Energy_data_7  test_Energy_data_8  test_Energy_data_9
test_propagation/compare_energy/: angles_t  data_angles_handles_2_t  data_angles_handles_t  handles_t
test_propagation/good_results/: Grads Bezier0  data_prior_coeur_3
test_propagation/test_alpha/: Test_alpha : Puissance=0  data_prior_2_fb  data_prior_3_fb  data_prior_fb
test_propagation/test_epsilon/: Test_epsilon : Puissance=0
(+3 files in other folders)
